components/nonmem-parser/src/snapshots/nonmem_parser__lower__tests__can_lower@everything.mod.snap
---
source: components/nonmem-parser/src/lower.rs
expression: model.debug_ast()
input_file: components/nonmem-parser/test_data/everything.mod
---
problem: 'Some header #2'
input:
  Included(ID)
  Included(TIME)
  Included(DV)
  Aliased(DOSE -> AMT)
  Included(DV)
  Included(WT)
  Included(AGE)
  Included(SEX)
  Included(CREA)
  Dropped(DATE)
data:
  "..\\path with spaces\\data.csv"
  ignore:
    Marker("#")
    ValueFilter("DVID" EQ Number(3.0))
    ValueFilter("ID" EQ Number(3.14))
    ValueFilter("DVID" EQ Number(3.0))
    ValueFilter("AGE" GE Number(18.0))
    ValueFilter("AGE" GT Number(3.0))
    ValueFilter("AGE" LT Number(100.0))
    ValueFilter("AGE" LE Number(65.0))
    ValueFilter("TYPE" NE Number(0.0))
    ValueFilter("TYPE" EQ Number(1.0))
    ValueFilter("TYPE" EQN Number(1.0))
    ValueFilter("TYPE" NEN Number(2.0))
    ValueFilter("TYPE" EQ Number(1.0))
  null value: "."
  num records: 200
  other options:
    LAST20=00
    TRANSLATE=(1,DV)
theta[0]: init=1.5 comment='THETA(1) and THETA(2)'
theta[1]: lower=0 init=0.5 upper=2 comment='THETA(1) and THETA(2)'
theta[2]: lower=-inf init=0.5 upper=10 comment='THETA with -INF lower bound'
theta[3]: lower=0 init=5 upper=inf comment='THETA with INF upper bound'
theta[4]: lower=0 init=0.1 comment='Three identical THETAs'
theta[5]: lower=0 init=0.1 comment='Three identical THETAs'
theta[6]: lower=0 init=0.1 comment='Three identical THETAs'
theta[7]: name='CL' lower=0 init=1.5 upper=10 comment='Named THETA'
theta[8]: name='KA' lower=0 init=0.5 comment='NAMES syntax'
theta[9]: name='V2' lower=0 init=10 comment='NAMES syntax'
theta[10]: name='Q' lower=0 init=2 comment='NAMES syntax'
theta[11]: name='A' lower=1 init=1.1 comment='Three identical THETAs with NAMES'
theta[12]: name='B' lower=1 init=1.1 comment='Three identical THETAs with NAMES'
theta[13]: name='C' lower=1 init=1.1 comment='Three identical THETAs with NAMES'
theta[14]: init=2.3 FIX comment='THETA(3)'
theta[15]: init=0.8 comment='THETA(4) and THETA(5)'
theta[16]: init=0.25 comment='THETA(4) and THETA(5)'
theta[17]: lower=1 init=2.3 FIX comment='THETA(6)'
theta[18]: init=0.75 FIX comment='THETA(7)'
theta[19]: init=-0.1

omega[0]: Diagonal
  0.04 comment='ETA(1) - CL (diagonal)'
omega[1]: Diagonal
  0.17
omega[2]: Block(2) Correlation
  0.2 comment='ETA(2) - V (SD)'
  0.3 comment='ETA(2)-ETA(3) correlation, ETA(3) - KA (SD)'  0.15 comment='ETA(2)-ETA(3) correlation, ETA(3) - KA (SD)'
omega[3]: BlockSame(2)
omega[4]: BlockSame(2)
omega[5]: Block(2) FIX
  0.011207
  0  0.338724
omega[6]: Block(4)
  0.1
  0.01  0.1
  0.01  0.01  0.1
  0.01  0.01  0.01  0.1
omega[7]: Block(2) Standard Deviation Correlation
  0.2
  0.3  0.15
omega[8]: Diagonal
  name=ECL 0.4 comment='Label=Value syntax for diagonal'
omega[9]: Block(2)
  name=EV1 0.3
  name=EQ 0.01 comment='Label=Value syntax in block'  0.35 comment='Label=Value syntax in block'
omega[10]: Block(4) NAMES(ECL2,EV2,EQ2,EV3)
  0.03
  0.01  0.03
  0.01  0.01  0.03
  0.01  0.01  0.01  0.03
omega[11]: Block(3) Correlation
  0.2
  0.3  0.15
  0.1  0.05  0.3
omega[12]: Block(3) Correlation
  0.2
  0.3  0.15
  0.1  0.05  0.3
omega[13]: Block(3) FIX
  6
  0.005  0.3
  0.001  0.002  0.1

sigma[0]: Block(2)
  0.01 comment='Proportional error variance'
  0.002 comment='Prop-Add covariance, Additive error variance'  0.25 comment='Prop-Add covariance, Additive error variance'
sigma[1]: Diagonal FIX
  1
sigma[2]: Diagonal
  0.036
sigma[3]: Diagonal
  name=PROP 0.04 comment='Label=Value syntax for SIGMA'
sigma[4]: Diagonal
  0.01 comment='diagonal SIGMA'
  0.02 comment='diagonal SIGMA'

estimation[0]: method=FO SLOW
estimation[1]: method=FOCE msfo=../2.MSF INTER MAXEVAL=9999 PRINT=5
estimation[2]: method=FOCE file=run001.est INTER MAXEVAL=9999 PRINT=5
estimation[3]: method=IMP file=est INTER MAXEVAL=9999
table[0]: file=../2.TAB ID TIME AMT EVID IPRED AGE WT MDV ETAS(1:LAST) ONEHEADER NOPRINT
table[1]: file=001.tab ID FORMAT=,1PE15.9
table[2]: file=../2par.TAB ID TIME AMT EVID AGE WT MDV KA CL V2 V3 Q BETA HLBE ONEHEADER NOPRINT
simulation: (1) (2 NONPARAMETRIC) SUBPROBLEMS=1
msfi: MSFB.MSF
subroutines:
  Builtin(ADVAN4, tol=9)
  Builtin(TRANS4)
  Other(fa.90)
abbreviated:
  REPLACE ETA(1)=ETA(3)
  REPLACE THETA(1)=THETA(5)
  COMRES=5
  DERIV2=NO
pk:
  TVCL = THETA(1)*(WT/70)**THETA(6)
  CL = TVCL*EXP(ETA(1))
  IF (CMT .EQ. 4 .AND. EVID .EQ. 0) THEN { CL = CL*2 }
  IF (AGE .GT. 18) THEN { IF (SEX .EQ. 1) THEN { CL = CL*1.1 } }
  IF (WT .GT. 70) THEN { V = 2 } { IF (AGE .GT. 65) THEN { V = 3 } } ELSEIF (WT .LT. 50) { V = 1 } ELSE { IF (SEX .EQ. 0) THEN { V = 4 } }
  I = 0
  DO WHILE (I .LT. 3) { I = I + 1 }
  J = 0
  DO WHILE (J .LT. 2) { J = J + 1 }
  CALL
