components/nonmem-parser/src/snapshots/nonmem_parser__lower__tests__can_lower@sim_nonparametric_with_msfi.mod.snap
---
source: components/nonmem-parser/src/lower.rs
expression: model.debug_ast()
input_file: components/nonmem-parser/test_data/sim_nonparametric_with_msfi.mod
---
problem: 'nonparametric with msfi'
input:
  Included(ID)
  Included(TIME)
  Included(DV)
data:
  "data.csv"
  ignore:
    Marker("@")
theta[0]: init=1


sigma[0]: Diagonal
  1

simulation: (1) (2 NONPARAMETRIC) ONLYSIM SUBPROBLEMS=1
msfi: MSFB.MSF
pred:
  Y = THETA(1) + EPS(1)
