components/nonmem-parser/src/snapshots/nonmem_parser__lower__tests__can_lower@sim_too_many_sources.mod.snap
---
source: components/nonmem-parser/src/lower.rs
expression: model.debug_ast()
input_file: components/nonmem-parser/test_data/sim_too_many_sources.mod
---
problem: 'too many sim sources'
input:
  Included(ID)
  Included(TIME)
  Included(DV)
data:
  "data.csv"
  ignore:
    Marker("@")
theta[0]: init=1


sigma[0]: Diagonal
  1

simulation: (804831 123) (1234 4321) (804 831) (621) (217 123) CLOCKSEED=1 ONLYSIM SUBPROBLEMS=1
pred:
  Y = THETA(1) + EPS(1)
